<resources>
    <string name="app_name">Challenge 2048</string>
    <string name="classical">Classical</string>
    <string name="challenging">Challenging</string>
    <string name="obstacle">Obstacle</string>
    <string name="game_over">Game Over !</string>
    <string name="restart">Restart</string>
    <string name="back_home">Home</string>
    <string name="new_game">New game</string>
    <string name="previous">Previous</string>
    <string name="score">Score</string>
    <string name="record">Record</string>
    <string name="tip">Tip:</string>
    <string name="tip_back">Three steps back at most.</string>
    <string name="tip_watch_ad">Whether to increase the chance of back off 3 times by watching ads?</string>
    <string name="yes">OK</string>
    <string name="next">Next time</string>
    <string name="tip_wait">The ads is not ready yet, please wait for a while (*^_^*).</string>
    <string name="tip_exit">Press again and exit.</string>
    <string name="four_four">4x4 (Varied)</string>
    <string name="ten_nine">10*9 (Varied)</string>
    <string name="author">Author:</string>
    <string name="opinion">Suggest:</string>
    <string name="about">About</string>
    <string name="thisScore">Final score:</string>
</resources>
