<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/game_over"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_final_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thisScore"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_newgame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_gameover"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/restart"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_backmenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/back_home"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>