<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7EDE4"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg_classical"
            android:onClick="mode1"
            android:text="@string/classical"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg_challenge"
            android:onClick="mode2"
            android:text="@string/challenging"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg_prop"
            android:onClick="mode3"
            android:text="@string/prop"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="ca-app-pub-7365304655459838/3508853379" />
</LinearLayout>